versions/v3.7.0/build/dts/api/bindings/adc/ti,ads7052.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/adc/ti,ads7052.html
original_path: build/dts/api/bindings/adc/ti,ads7052.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# ti,ads7052 (on spi bus)

Vendor: [Texas Instruments](../../bindings.md#dt-vendor-ti)

## Description

```text
Texas Instrument Single Channel SPI ADC
```

## Properties

### Top level properties

These property descriptions apply to “ti,ads7052”
nodes themselves. This page also describes child node
properties in the following sections.

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `#io-channel-cells` | `int` | This property is **required**.  Constant value: `1` |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `spi-max-frequency` | `int` | ```text Maximum clock frequency of device's SPI interface in Hz ```  This property is **required**. |
| `duplex` | `int` | ```text Duplex mode, full or half. By default it's always full duplex thus 0 as this is, by far, the most common mode. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0    SPI_FULL_DUPLEX   2048 SPI_HALF_DUPLEX ```  Legal values: `0`, `2048` |
| `frame-format` | `int` | ```text Motorola or TI frame format. By default it's always Motorola's, thus 0 as this is, by far, the most common format. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0     SPI_FRAME_FORMAT_MOTOROLA   32768 SPI_FRAME_FORMAT_TI ```  Legal values: `0`, `32768` |
| `spi-cpol` | `boolean` | ```text SPI clock polarity which indicates the clock idle state. If it is used, the clock idle state is logic high; otherwise, low. ``` |
| `spi-cpha` | `boolean` | ```text SPI clock phase that indicates on which edge data is sampled. If it is used, data is sampled on the second edge; otherwise, on the first edge. ``` |
| `spi-hold-cs` | `boolean` | ```text In some cases, it is necessary for the master to manage SPI chip select under software control, so that multiple spi transactions can be performed without releasing it. A typical use case is variable length SPI packets where the first spi transaction reads the length and the second spi transaction reads length bytes. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “ti,ads7052” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ```  Constant value: `1` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |

### Child node properties

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text Channel identifier. ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `zephyr,gain` | `string` | ```text Gain selection: - ADC_GAIN_1_6: x 1/6 - ADC_GAIN_1_5: x 1/5 - ADC_GAIN_1_4: x 1/4 - ADC_GAIN_1_3: x 1/3 - ADC_GAIN_2_5: x 2/5 - ADC_GAIN_1_2: x 1/2 - ADC_GAIN_2_3: x 2/3 - ADC_GAIN_4_5: x 4/5 - ADC_GAIN_1:   x 1 - ADC_GAIN_2:   x 2 - ADC_GAIN_3:   x 3 - ADC_GAIN_4:   x 4 - ADC_GAIN_6:   x 6 - ADC_GAIN_8:   x 8 - ADC_GAIN_12:  x 12 - ADC_GAIN_16:  x 16 - ADC_GAIN_24:  x 24 - ADC_GAIN_32:  x 32 - ADC_GAIN_64:  x 64 - ADC_GAIN_128: x 128 ```  This property is **required**.  Legal values: `'ADC_GAIN_1_6'`, `'ADC_GAIN_1_5'`, `'ADC_GAIN_1_4'`, `'ADC_GAIN_1_3'`, `'ADC_GAIN_2_5'`, `'ADC_GAIN_1_2'`, `'ADC_GAIN_2_3'`, `'ADC_GAIN_4_5'`, `'ADC_GAIN_1'`, `'ADC_GAIN_2'`, `'ADC_GAIN_3'`, `'ADC_GAIN_4'`, `'ADC_GAIN_6'`, `'ADC_GAIN_8'`, `'ADC_GAIN_12'`, `'ADC_GAIN_16'`, `'ADC_GAIN_24'`, `'ADC_GAIN_32'`, `'ADC_GAIN_64'`, `'ADC_GAIN_128'` |
| `zephyr,reference` | `string` | ```text Reference selection: - ADC_REF_VDD_1:     VDD - ADC_REF_VDD_1_2:   VDD/2 - ADC_REF_VDD_1_3:   VDD/3 - ADC_REF_VDD_1_4:   VDD/4 - ADC_REF_INTERNAL:  Internal - ADC_REF_EXTERNAL0: External, input 0 - ADC_REF_EXTERNAL1: External, input 1 ```  This property is **required**.  Legal values: `'ADC_REF_VDD_1'`, `'ADC_REF_VDD_1_2'`, `'ADC_REF_VDD_1_3'`, `'ADC_REF_VDD_1_4'`, `'ADC_REF_INTERNAL'`, `'ADC_REF_EXTERNAL0'`, `'ADC_REF_EXTERNAL1'` |
| `zephyr,vref-mv` | `int` | ```text This property can be used to specify the voltage (in millivolts) of the reference selected for this channel, so that applications can get that value if needed for some calculations. For the internal reference, the voltage can be usually obtained with a dedicated ADC API call, so there is no need to use this property in that case, but for other references this property can be useful. ``` |
| `zephyr,acquisition-time` | `int` | ```text Acquisition time. Use the ADC_ACQ_TIME macro to compose the value for this property or pass ADC_ACQ_TIME_DEFAULT to use the default setting for a given hardware (e.g. when the hardware does not allow to configure the acquisition time). ```  This property is **required**. |
| `zephyr,differential` | `boolean` | ```text When set, selects differential input mode for the channel. Otherwise, single-ended mode is used unless the zephyr,input-negative property is specified, in which case the differential mode is selected implicitly. ``` |
| `zephyr,input-positive` | `int` | ```text Positive ADC input. Used only for drivers that select the ADC_CONFIGURABLE_INPUTS Kconfig option. ``` |
| `zephyr,input-negative` | `int` | ```text Negative ADC input. Used only for drivers that select the ADC_CONFIGURABLE_INPUTS Kconfig option. When specified, implies the differential input mode for the channel. ``` |
| `zephyr,resolution` | `int` | ```text ADC resolution to be used for the channel. ``` |
| `zephyr,oversampling` | `int` | ```text Oversampling setting to be used for the channel. When specified, each sample is averaged from 2^N conversion results (where N is the provided value). ``` |
| `zephyr,current-source-pin` | `uint8-array` | ```text Output pin selection for the current sources. The actual interpretation depends on the driver. This is used only for drivers which select the ADC_CONFIGURABLE_EXCITATION_CURRENT_SOURCE_PIN Kconfig option. ``` |
| `zephyr,vbias-pins` | `int` | ```text Output pin selection for the bias voltage. The actual interpretation depends on the driver. This is used only for drivers which select the ADC_CONFIGURABLE_VBIAS_PIN Kconfig option. ``` |

## Specifier cell names

- io-channel cells: input
